# afhlaton

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: CMakeCCompilerId.c.6056EECF95D019D3.idx  addon.c.49F6B2A936D7E668.idx  addon.h.F4C46ACE472CD2D2.idx  allocator.c.3C8B9EDAD501237C.idx  allocator.h.A8F0C83191C503B4.idx  allocator.h.C0A6B8FE9BD3C89D.idx  array.c.4D1CFFBFC9B68A5A.idx  array.h.7C6F25A82401E5A3.idx  atomic.c.E7110E126C1D70A6.idx  backend.c.15258DA7D5E4604A.idx  backend.c.2621EDFB1B680824.idx  backend.c.63C1C3547763CA1E.idx  backend.c.837CFDADFF1FCA76.idx  backend.c.99278AECCA0A43B1.idx  backend.c.9ADD0F107921B694.idx  backend.c.EA5640D1C02A7952.idx  backend.h.5744E969BB2C2ABD.idx  backend.h.D1E16FB3F02E57C5.idx  box.c.19BD68899C634272.idx  box.h.81343E90532E7F71.idx  buffer.c.81867956C30E98B6.idx  client.c.E2273C2BC9B625DA.idx  cursor.c.744F6115D8DEF1E7.idx  cursor.c.B0D97BCC90162F8A.idx  cursor.h.6A20AFB79C136756.idx  cursor_data.h.707C0C7248F91991.idx  dmabuf.c.441CE45F4C6ADC37.idx  dmabuf.c.E53EE5E6394BEF64.idx  dmabuf.h.23A85E375974D4F0.idx  dmabuf.h.F85A20F47DC9E6B9.idx  dmabuf_linux.c.9B99CDBE55930F49.idx  dnd.c.898843DAAAAE17F1.idx  drag_icon.c.169163FB77704640.idx  drm.c.B5001392893588B1.idx  drm.h.21271B0AD8AFE652.idx  drm.h.48D113DC59308FEC.idx  drm_dumb.c.C251192DC1E9B905.idx  drm_dumb.h.83431826077A73A1.idx  drm_format_set.c.4570AB0ABFF7CE5A.idx  drm_format_set.h.69C33B4E864C3EE5.idx  (+299 more)
scripts/: clean.sh  debug.sh  devenv  fix_clang.sh  shell.sh
src/: cursor.c  cursor.h  macros.h  main.c  output.c  output.h  seat.c  seat.h  server.c  server.h  wayland_headers.h  xdg-shell.c  xdg-shell.h
